--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
             </div>
             <div class="form-group">
                     <label for="formGroupExampleInput3">Message</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput3" placeholder=>
+                    <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Say something nice :)">
                   </div>
                  <br>
                   <input class="button" type="submit" value="Submit">
