--- a/contact.html
+++ b/contact.html
@@ -48,29 +48,18 @@
               <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="example123@gmail.com">
             </div>
             <div class="form-group">
-                    <label for="formGroupExampleInput3">Message</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Say something nice :)">
-                  </div>
-                 <br>
-                  <input class="button" type="submit" value="Submit">
-        </div>
-          </form>
+                <label for="formGroupExampleInput3">Message</label>
+                <input type="text" class="form-control" id="formGroupExampleInput3" placeholder="Say something nice :)">
+            </div>
+            <br>
+                <input class="button" type="submit" value="Submit">
+    </div>
+    <div>
+</form>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
+    <footer>2019 ©</footer>
 
 
      
