--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Clarisse's Responsive Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+
+<!--nav bar-->
+<nav class="navbar navbar-expand-lg" style="background-color: teal;">
+        <a href="index.html">About</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+            <a href="portfolio.html">Portfolio</a>
+
+            </li>
+            <li class="nav-item">
+         <a href="contact.html">Contact</a> 
+            </li>
+            <li class="nav-item">
+            </li>
+          </ul>
+        </div>
+        <div class="my-name">Clarisse Moraes</div>
+      </nav>
+
+<!--this is where the rows and columns are with the images/name of our upcoming projects-->
+
+<div class="portCont">
+    <h3>Portfolio</h3>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <img src="assets/images/Hangman.jpg">
+        <div class="banner">  
+            Hangman
+        </div>  
+    </div>
+        <div class="col">
+            <img src="assets/images/RPS.jpg">
+            <div class="banner">Rock Paper Scissors</div>
+    </div>
+    </div>
+        <div class="row">
+          <div class="col">
+            <img src="assets/images/Rutgers.jpg">
+            <div class="banner">Rutgers Info Widget</div>
+    </div>
+        <div class="col">
+            <img src="assets/images/Trivia.jpg">
+            <div class="banner2">Trivia</div>
+    </div>
+        <div class="col">
+            <img src="assets/images/rpgGame.jpg">
+            <div class="banner3">Role Playing Game</div>
+    </div>
+        </div>
+</div>
+    
+
+
+
+
+
+
+
+<footer>2019 ©</footer>
     
 </body>
 </html>
