updated portfolio with new project

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,9 +40,9 @@
     <hr>
     <div class="row">
         <div class="col">
-            <img src="assets/images/Hangman.jpg">
-        <div class="banner">  
-            Hangman
+           <div class="firstImg"> <img src="assets/images/AppetiteProj.jpg"></div>
+        <div class="banner"> <button class="appBtn"  onclick="window.location.href = 'https://cmoraes2013.github.io/APPetite-Project/';">APPetite Project</button c>  
+  
         </div>  
     </div>
         <div class="col">
